# src/routes/auth.routes.js
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 // validación de datos
-import { loginController, registerController, updateUserPasswordController } from '../controllers/authController.js';
+import { loginController, refreshController, registerController, updateUserPasswordController } from '../controllers/authController.js';
 import { loginSchema, registerSchema, updateUserSchema } from '../schemas/authSchemas.js';
 // middlewares
 import { validateSchema } from '../middlewares/schemaValidator.js';
@@ -11,7 +11,7 @@ const router = Router();
 // públicas
 router.post('/sign-up', validateSchema(registerSchema), registerController);
 router.post('/login', validateSchema(loginSchema), loginController);
-// router.post('/refresh'); // TODO
+router.post('/refresh', refreshController);
 
 // protegidas
 router.patch('/password/:id', verifyToken, verifyOwnership, validateSchema(updateUserSchema), updateUserPasswordController);
